@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.aot.agent;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.aot.hint.RuntimeHints;
@@ -99,7 +98,7 @@ public final class RecordedInvocation {
 	 */
 	@SuppressWarnings("unchecked")
 	public <T> T getInstance() {
-		Assert.notNull(this.instance, "Cannot resolve 'this' for static invocations");
+		Assert.state(this.instance != null, "Cannot resolve 'this' for static invocations");
 		return (T) this.instance;
 	}
 
@@ -109,11 +108,16 @@ public final class RecordedInvocation {
 	 * @throws IllegalStateException in case of static invocations (there is no {@code this})
 	 */
 	public TypeReference getInstanceTypeReference() {
-		Assert.notNull(this.instance, "Cannot resolve 'this' for static invocations");
-		if (this.instance instanceof Class<?>) {
-			return TypeReference.of((Class<?>) this.instance);
-		}
+		Assert.state(this.instance != null, "Cannot resolve 'this' for static invocations");
 		return TypeReference.of(this.instance.getClass());
+	}
+
+	/**
+	 * Return whether the current invocation is static.
+	 * @return {@code true} if the invocation is static
+	 */
+	public boolean isStatic() {
+		return this.instance == null;
 	}
 
 	/**
@@ -148,7 +152,7 @@ public final class RecordedInvocation {
 	 * @return the argument types, starting at the given index
 	 */
 	public List<TypeReference> getArgumentTypes(int index) {
-		return Arrays.stream(this.arguments).skip(index).map(param -> TypeReference.of(param.getClass())).collect(Collectors.toList());
+		return Arrays.stream(this.arguments).skip(index).map(param -> TypeReference.of(param.getClass())).toList();
 	}
 
 	/**
@@ -172,8 +176,15 @@ public final class RecordedInvocation {
 
 	@Override
 	public String toString() {
-		return String.format("<%s> invocation of <%s> on type <%s> with arguments %s",
-				getHintType().hintClassName(), getMethodReference(), getInstanceTypeReference(), getArguments());
+		if (isStatic()) {
+			return "<%s> invocation of <%s> with arguments %s".formatted(
+					getHintType().hintClassName(), getMethodReference(), getArguments());
+		}
+		else {
+			Class<?> instanceType = (getInstance() instanceof Class<?> clazz) ? clazz : getInstance().getClass();
+			return "<%s> invocation of <%s> on type <%s> with arguments %s".formatted(
+					getHintType().hintClassName(), getMethodReference(), instanceType.getCanonicalName(), getArguments());
+		}
 	}
 
 	/**
@@ -247,7 +258,7 @@ public final class RecordedInvocation {
 		public RecordedInvocation build() {
 			List<StackWalker.StackFrame> stackFrames = StackWalker.getInstance().walk(stream -> stream
 					.dropWhile(stackFrame -> stackFrame.getClassName().startsWith(getClass().getPackageName()))
-					.collect(Collectors.toList()));
+					.toList());
 			return new RecordedInvocation(this.instrumentedMethod, this.instance, this.arguments, this.returnValue, stackFrames);
 		}
 
