@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -48,7 +48,7 @@ import org.springframework.util.MimeType;
 import org.springframework.util.ObjectUtils;
 
 /**
- * Base class providing support methods for Jackson 2.9 encoding and decoding.
+ * Base class providing support methods for Jackson 2.x encoding and decoding.
  *
  * @author Sebastien Deleuze
  * @author Rossen Stoyanchev
@@ -75,7 +75,7 @@ public abstract class Jackson2CodecSupport {
 	private static final String JSON_VIEW_HINT_ERROR =
 			"@JsonView only supported for write hints with exactly 1 class argument: ";
 
-	private static final List<MimeType> DEFAULT_MIME_TYPES = List.of(
+	private static final List<MimeType> defaultMimeTypes = List.of(
 			MediaType.APPLICATION_JSON,
 			new MediaType("application", "*+json"),
 			MediaType.APPLICATION_NDJSON);
@@ -90,8 +90,6 @@ public abstract class Jackson2CodecSupport {
 
 	private final List<MimeType> mimeTypes;
 
-	private final List<MimeType> problemDetailMimeTypes;
-
 
 	/**
 	 * Constructor with a Jackson {@link ObjectMapper} to use.
@@ -99,15 +97,7 @@ public abstract class Jackson2CodecSupport {
 	protected Jackson2CodecSupport(ObjectMapper objectMapper, MimeType... mimeTypes) {
 		Assert.notNull(objectMapper, "ObjectMapper must not be null");
 		this.defaultObjectMapper = objectMapper;
-		this.mimeTypes = (!ObjectUtils.isEmpty(mimeTypes) ? List.of(mimeTypes) : DEFAULT_MIME_TYPES);
-		this.problemDetailMimeTypes = initProblemDetailMediaTypes(this.mimeTypes);
-	}
-
-	private static List<MimeType> initProblemDetailMediaTypes(List<MimeType> supportedMimeTypes) {
-		List<MimeType> mimeTypes = new ArrayList<>();
-		mimeTypes.add(MediaType.APPLICATION_PROBLEM_JSON);
-		mimeTypes.addAll(supportedMimeTypes);
-		return Collections.unmodifiableList(mimeTypes);
+		this.mimeTypes = (!ObjectUtils.isEmpty(mimeTypes) ? List.of(mimeTypes) : defaultMimeTypes);
 	}
 
 
@@ -193,7 +183,16 @@ public abstract class Jackson2CodecSupport {
 		if (!CollectionUtils.isEmpty(result)) {
 			return result;
 		}
-		return (ProblemDetail.class.isAssignableFrom(elementClass) ? this.problemDetailMimeTypes : getMimeTypes());
+		return (ProblemDetail.class.isAssignableFrom(elementClass) ? getMediaTypesForProblemDetail() : getMimeTypes());
+	}
+
+	/**
+	 * Return the supported media type(s) for {@link ProblemDetail}.
+	 * By default, an empty list, unless overridden in subclasses.
+	 * @since 6.0.5
+	 */
+	protected List<MimeType> getMediaTypesForProblemDetail() {
+		return Collections.emptyList();
 	}
 
 	protected boolean supportsMimeType(@Nullable MimeType mimeType) {
@@ -242,7 +241,7 @@ public abstract class Jackson2CodecSupport {
 			JsonView annotation = getAnnotation(param, JsonView.class);
 			if (annotation != null) {
 				Class<?>[] classes = annotation.value();
-				Assert.isTrue(classes.length == 1, JSON_VIEW_HINT_ERROR + param);
+				Assert.isTrue(classes.length == 1, () -> JSON_VIEW_HINT_ERROR + param);
 				hints = (hints != null ? hints : new HashMap<>(1));
 				hints.put(JSON_VIEW_HINT, classes[0]);
 			}
@@ -255,7 +254,7 @@ public abstract class Jackson2CodecSupport {
 
 	@Nullable
 	protected MethodParameter getParameter(ResolvableType type) {
-		return (type.getSource() instanceof MethodParameter ? (MethodParameter) type.getSource() : null);
+		return (type.getSource() instanceof MethodParameter methodParameter ? methodParameter : null);
 	}
 
 	@Nullable
