@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import org.reactivestreams.Publisher;
 import reactor.core.publisher.Flux;
@@ -195,18 +194,16 @@ public abstract class BodyExtractors {
 		MediaType contentType = Optional.ofNullable(message.getHeaders().getContentType())
 				.orElse(MediaType.APPLICATION_OCTET_STREAM);
 
-		return context.messageReaders().stream()
-				.filter(reader -> reader.canRead(elementType, contentType))
-				.findFirst()
-				.map(BodyExtractors::<T>cast)
-				.map(readerFunction)
-				.orElseGet(() -> {
-					List<MediaType> mediaTypes = context.messageReaders().stream()
-							.flatMap(reader -> reader.getReadableMediaTypes(elementType).stream())
-							.collect(Collectors.toList());
-					return errorFunction.apply(
-							new UnsupportedMediaTypeException(contentType, mediaTypes, elementType));
-				});
+		for (HttpMessageReader<?> messageReader : context.messageReaders()) {
+			if (messageReader.canRead(elementType, contentType)) {
+				return readerFunction.apply(cast(messageReader));
+			}
+		}
+		List<MediaType> mediaTypes = context.messageReaders().stream()
+				.flatMap(reader -> reader.getReadableMediaTypes(elementType).stream())
+				.toList();
+		return errorFunction.apply(
+				new UnsupportedMediaTypeException(contentType, mediaTypes, elementType));
 	}
 
 	private static <T> Mono<T> readToMono(ReactiveHttpInputMessage message, BodyExtractor.Context context,
@@ -246,12 +243,13 @@ public abstract class BodyExtractors {
 	private static <T> HttpMessageReader<T> findReader(
 			ResolvableType elementType, MediaType mediaType, BodyExtractor.Context context) {
 
-		return context.messageReaders().stream()
-				.filter(messageReader -> messageReader.canRead(elementType, mediaType))
-				.findFirst()
-				.map(BodyExtractors::<T>cast)
-				.orElseThrow(() -> new IllegalStateException(
-						"No HttpMessageReader for \"" + mediaType + "\" and \"" + elementType + "\""));
+		for (HttpMessageReader<?> messageReader : context.messageReaders()) {
+			if (messageReader.canRead(elementType, mediaType)) {
+				return cast(messageReader);
+			}
+		}
+		throw new IllegalStateException(
+						"No HttpMessageReader for \"" + mediaType + "\" and \"" + elementType + "\"");
 	}
 
 	@SuppressWarnings("unchecked")
