@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,9 +17,6 @@
 package org.springframework.web.servlet.resource;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import jakarta.servlet.http.HttpServletResponse;
@@ -59,9 +56,14 @@ import static org.mockito.Mockito.mock;
  * @author Jeremy Grelle
  * @author Rossen Stoyanchev
  * @author Brian Clozel
+ * @author Sam Brannen
  */
 @ExtendWith(GzipSupport.class)
-public class ResourceHttpRequestHandlerTests {
+class ResourceHttpRequestHandlerTests {
+
+	private final ClassPathResource testResource = new ClassPathResource("test/", getClass());
+	private final ClassPathResource testAlternatePathResource = new ClassPathResource("testalternatepath/", getClass());
+	private final ClassPathResource webjarsResource = new ClassPathResource("META-INF/resources/webjars/");
 
 	private ResourceHttpRequestHandler handler;
 
@@ -71,16 +73,16 @@ public class ResourceHttpRequestHandlerTests {
 
 
 	@BeforeEach
-	public void setup() throws Exception {
-		List<Resource> paths = new ArrayList<>(2);
-		paths.add(new ClassPathResource("test/", getClass()));
-		paths.add(new ClassPathResource("testalternatepath/", getClass()));
-		paths.add(new ClassPathResource("META-INF/resources/webjars/"));
+	void setup() throws Exception {
+		List<Resource> locations = List.of(
+				this.testResource,
+				this.testAlternatePathResource,
+				this.webjarsResource);
 
 		TestServletContext servletContext = new TestServletContext();
 
 		this.handler = new ResourceHttpRequestHandler();
-		this.handler.setLocations(paths);
+		this.handler.setLocations(locations);
 		this.handler.setCacheSeconds(3600);
 		this.handler.setServletContext(servletContext);
 		this.handler.afterPropertiesSet();
@@ -91,7 +93,7 @@ public class ResourceHttpRequestHandlerTests {
 
 
 	@Test
-	public void getResource() throws Exception {
+	void getResource() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.handleRequest(this.request, this.response);
 
@@ -101,12 +103,12 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
 		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 		assertThat(this.response.getContentAsString()).isEqualTo("h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceHttpHeader() throws Exception {
+	void getResourceHttpHeader() throws Exception {
 		this.request.setMethod("HEAD");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.handleRequest(this.request, this.response);
@@ -123,7 +125,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void getResourceHttpOptions() throws Exception {
+	void getResourceHttpOptions() throws Exception {
 		this.request.setMethod("OPTIONS");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.handleRequest(this.request, this.response);
@@ -133,7 +135,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void getResourceNoCache() throws Exception {
+	void getResourceNoCache() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.setCacheSeconds(0);
 		this.handler.handleRequest(this.request, this.response);
@@ -142,14 +144,14 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
 		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getVersionedResource() throws Exception {
+	void getVersionedResource() throws Exception {
 		VersionResourceResolver versionResolver = new VersionResourceResolver()
 				.addFixedVersionStrategy("versionString", "/**");
-		this.handler.setResourceResolvers(Arrays.asList(versionResolver, new PathResourceResolver()));
+		this.handler.setResourceResolvers(List.of(versionResolver, new PathResourceResolver()));
 		this.handler.afterPropertiesSet();
 
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "versionString/foo.css");
@@ -157,12 +159,12 @@ public class ResourceHttpRequestHandlerTests {
 
 		assertThat(this.response.getHeader("ETag")).isEqualTo("W/\"versionString\"");
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
 	@SuppressWarnings("deprecation")
-	public void getResourceHttp10BehaviorCache() throws Exception {
+	void getResourceHttp10BehaviorCache() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.setCacheSeconds(3600);
 		this.handler.setUseExpiresHeader(true);
@@ -171,16 +173,17 @@ public class ResourceHttpRequestHandlerTests {
 		this.handler.handleRequest(this.request, this.response);
 
 		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("max-age=3600, must-revalidate");
-		assertThat(this.response.getDateHeader("Expires") >= System.currentTimeMillis() - 1000 + (3600 * 1000)).isTrue();
+		assertThat(this.response.getDateHeader("Expires")).isGreaterThanOrEqualTo(
+				System.currentTimeMillis() - 1000 + (3600 * 1000));
 		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
 		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
 	@SuppressWarnings("deprecation")
-	public void getResourceHttp10BehaviorNoCache() throws Exception {
+	void getResourceHttp10BehaviorNoCache() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.setCacheSeconds(0);
 		this.handler.setUseExpiresHeader(true);
@@ -191,15 +194,15 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.getHeader("Pragma")).isEqualTo("no-cache");
 		assertThat(this.response.getHeaderValues("Cache-Control")).hasSize(1);
 		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("no-cache");
-		assertThat(this.response.getDateHeader("Expires") <= System.currentTimeMillis()).isTrue();
+		assertThat(this.response.getDateHeader("Expires")).isLessThanOrEqualTo(System.currentTimeMillis());
 		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
 		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceWithHtmlMediaType() throws Exception {
+	void getResourceWithHtmlMediaType() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.html");
 		this.handler.handleRequest(this.request, this.response);
 
@@ -208,11 +211,11 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
 		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.html") / 1000);
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceFromAlternatePath() throws Exception {
+	void getResourceFromAlternatePath() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "baz.css");
 		this.handler.handleRequest(this.request, this.response);
 
@@ -222,12 +225,12 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
 		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("testalternatepath/baz.css") / 1000);
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 		assertThat(this.response.getContentAsString()).isEqualTo("h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceFromSubDirectory() throws Exception {
+	void getResourceFromSubDirectory() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "js/foo.js");
 		this.handler.handleRequest(this.request, this.response);
 
@@ -236,7 +239,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void getResourceFromSubDirectoryOfAlternatePath() throws Exception {
+	void getResourceFromSubDirectoryOfAlternatePath() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "js/baz.js");
 		this.handler.handleRequest(this.request, this.response);
 
@@ -246,13 +249,13 @@ public class ResourceHttpRequestHandlerTests {
 
 	@Test  // SPR-13658
 	@SuppressWarnings("deprecation")
-	public void getResourceWithRegisteredMediaType() throws Exception {
+	void getResourceWithRegisteredMediaType() throws Exception {
 		ContentNegotiationManagerFactoryBean factory = new ContentNegotiationManagerFactoryBean();
 		factory.addMediaType("bar", new MediaType("foo", "bar"));
 		factory.afterPropertiesSet();
 		ContentNegotiationManager manager = factory.getObject();
 
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
 		handler.setServletContext(new MockServletContext());
 		handler.setLocations(paths);
@@ -268,13 +271,13 @@ public class ResourceHttpRequestHandlerTests {
 
 	@Test  // SPR-14577
 	@SuppressWarnings("deprecation")
-	public void getMediaTypeWithFavorPathExtensionOff() throws Exception {
+	void getMediaTypeWithFavorPathExtensionOff() throws Exception {
 		ContentNegotiationManagerFactoryBean factory = new ContentNegotiationManagerFactoryBean();
 		factory.setFavorPathExtension(false);
 		factory.afterPropertiesSet();
 		ContentNegotiationManager manager = factory.getObject();
 
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
 		handler.setServletContext(new MockServletContext());
 		handler.setLocations(paths);
@@ -289,7 +292,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test  // SPR-14368
-	public void getResourceWithMediaTypeResolvedThroughServletContext() throws Exception {
+	void getResourceWithMediaTypeResolvedThroughServletContext() throws Exception {
 		MockServletContext servletContext = new MockServletContext() {
 			@Override
 			public String getMimeType(String filePath) {
@@ -297,7 +300,7 @@ public class ResourceHttpRequestHandlerTests {
 			}
 		};
 
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
 		handler.setServletContext(servletContext);
 		handler.setLocations(paths);
@@ -312,8 +315,8 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test  // gh-27538, gh-27624
-	public void filterNonExistingLocations() throws Exception {
-		List<Resource> inputLocations = Arrays.asList(
+	void filterNonExistingLocations() throws Exception {
+		List<Resource> inputLocations = List.of(
 				new ClassPathResource("test/", getClass()),
 				new ClassPathResource("testalternatepath/", getClass()),
 				new ClassPathResource("nosuchpath/", getClass()));
@@ -331,18 +334,18 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void testInvalidPath() throws Exception {
+	void testInvalidPath() throws Exception {
 		// Use mock ResourceResolver: i.e. we're only testing upfront validations...
 
-		Resource resource = mock(Resource.class);
+		Resource resource = mock();
 		given(resource.getFilename()).willThrow(new AssertionError("Resource should not be resolved"));
 		given(resource.getInputStream()).willThrow(new AssertionError("Resource should not be resolved"));
-		ResourceResolver resolver = mock(ResourceResolver.class);
+		ResourceResolver resolver = mock();
 		given(resolver.resolveResource(any(), any(), any(), any())).willReturn(resource);
 
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
-		handler.setResourceResolvers(Collections.singletonList(resolver));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setResourceResolvers(List.of(resolver));
 		handler.setServletContext(new TestServletContext());
 		handler.afterPropertiesSet();
 
@@ -351,7 +354,7 @@ public class ResourceHttpRequestHandlerTests {
 		testInvalidPath(":/../../testsecret/secret.txt", handler);
 
 		Resource location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
@@ -373,7 +376,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void resolvePathWithTraversal() throws Exception {
+	void resolvePathWithTraversal() throws Exception {
 		for (HttpMethod method : HttpMethod.values()) {
 			this.request = new MockHttpServletRequest("GET", "");
 			this.response = new MockHttpServletResponse();
@@ -385,14 +388,14 @@ public class ResourceHttpRequestHandlerTests {
 		this.request.setMethod(httpMethod.name());
 
 		Resource location = new ClassPathResource("test/", getClass());
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 
 		testResolvePathWithTraversal(location, "../testsecret/secret.txt");
 		testResolvePathWithTraversal(location, "test/../../testsecret/secret.txt");
 		testResolvePathWithTraversal(location, ":/../../testsecret/secret.txt");
 
 		location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
@@ -418,7 +421,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void ignoreInvalidEscapeSequence() throws Exception {
+	void ignoreInvalidEscapeSequence() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "/%foo%/bar.txt");
 		this.response = new MockHttpServletResponse();
 		this.handler.handleRequest(this.request, this.response);
@@ -426,7 +429,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void processPath() {
+	void processPath() {
 		// Unchanged
 		assertThat(this.handler.processPath("/foo/bar")).isSameAs("/foo/bar");
 		assertThat(this.handler.processPath("foo/bar")).isSameAs("foo/bar");
@@ -449,7 +452,7 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.handler.processPath((char) 1 + " / " + (char) 127 + " // foo/bar")).isEqualTo("/foo/bar");
 
 		// root or empty path
-		assertThat(this.handler.processPath("   ")).isEqualTo("");
+		assertThat(this.handler.processPath("   ")).isEmpty();
 		assertThat(this.handler.processPath("/")).isEqualTo("/");
 		assertThat(this.handler.processPath("///")).isEqualTo("/");
 		assertThat(this.handler.processPath("/ /   / ")).isEqualTo("/");
@@ -463,18 +466,15 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void initAllowedLocations() {
+	void initAllowedLocations() {
 		PathResourceResolver resolver = (PathResourceResolver) this.handler.getResourceResolvers().get(0);
 		Resource[] locations = resolver.getAllowedLocations();
 
-		assertThat(locations.length).isEqualTo(3);
-		assertThat(((ClassPathResource) locations[0]).getPath()).isEqualTo("test/");
-		assertThat(((ClassPathResource) locations[1]).getPath()).isEqualTo("testalternatepath/");
-		assertThat(((ClassPathResource) locations[2]).getPath()).isEqualTo("META-INF/resources/webjars/");
+		assertThat(locations).containsExactly(this.testResource, this.testAlternatePathResource, this.webjarsResource);
 	}
 
 	@Test
-	public void initAllowedLocationsWithExplicitConfiguration() throws Exception {
+	void initAllowedLocationsWithExplicitConfiguration() throws Exception {
 		ClassPathResource location1 = new ClassPathResource("test/", getClass());
 		ClassPathResource location2 = new ClassPathResource("testalternatepath/", getClass());
 
@@ -482,18 +482,16 @@ public class ResourceHttpRequestHandlerTests {
 		pathResolver.setAllowedLocations(location1);
 
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
-		handler.setResourceResolvers(Collections.singletonList(pathResolver));
+		handler.setResourceResolvers(List.of(pathResolver));
 		handler.setServletContext(new MockServletContext());
-		handler.setLocations(Arrays.asList(location1, location2));
+		handler.setLocations(List.of(location1, location2));
 		handler.afterPropertiesSet();
 
-		Resource[] locations = pathResolver.getAllowedLocations();
-		assertThat(locations.length).isEqualTo(1);
-		assertThat(((ClassPathResource) locations[0]).getPath()).isEqualTo("test/");
+		assertThat(pathResolver.getAllowedLocations()).containsExactly(location1);
 	}
 
 	@Test
-	public void notModified() throws Exception {
+	void notModified() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.request.addHeader("If-Modified-Since", resourceLastModified("test/foo.css"));
 		this.handler.handleRequest(this.request, this.response);
@@ -501,7 +499,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void modified() throws Exception {
+	void modified() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.request.addHeader("If-Modified-Since", resourceLastModified("test/foo.css") / 1000 * 1000 - 1);
 		this.handler.handleRequest(this.request, this.response);
@@ -510,34 +508,34 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void directory() throws Exception {
+	void directory() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "js/");
 		this.handler.handleRequest(this.request, this.response);
 		assertThat(this.response.getStatus()).isEqualTo(404);
 	}
 
 	@Test
-	public void directoryInJarFile() throws Exception {
+	void directoryInJarFile() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "underscorejs/");
 		this.handler.handleRequest(this.request, this.response);
 		assertThat(this.response.getStatus()).isEqualTo(404);
 	}
 
 	@Test
-	public void missingResourcePath() throws Exception {
+	void missingResourcePath() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "");
 		this.handler.handleRequest(this.request, this.response);
 		assertThat(this.response.getStatus()).isEqualTo(404);
 	}
 
 	@Test
-	public void noPathWithinHandlerMappingAttribute() throws Exception {
+	void noPathWithinHandlerMappingAttribute() throws Exception {
 		assertThatIllegalStateException().isThrownBy(() ->
 				this.handler.handleRequest(this.request, this.response));
 	}
 
 	@Test
-	public void unsupportedHttpMethod() throws Exception {
+	void unsupportedHttpMethod() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.request.setMethod("POST");
 		assertThatExceptionOfType(HttpRequestMethodNotSupportedException.class).isThrownBy(() ->
@@ -545,7 +543,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void resourceNotFound() throws Exception {
+	void resourceNotFound() throws Exception {
 		for (HttpMethod method : HttpMethod.values()) {
 			this.request = new MockHttpServletRequest("GET", "");
 			this.response = new MockHttpServletResponse();
@@ -561,7 +559,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void partialContentByteRange() throws Exception {
+	void partialContentByteRange() throws Exception {
 		this.request.addHeader("Range", "bytes=0-1");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
@@ -572,11 +570,11 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 0-1/10");
 		assertThat(this.response.getContentAsString()).isEqualTo("So");
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentByteRangeNoEnd() throws Exception {
+	void partialContentByteRangeNoEnd() throws Exception {
 		this.request.addHeader("Range", "bytes=9-");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
@@ -587,11 +585,11 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(this.response.getContentAsString()).isEqualTo(".");
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentByteRangeLargeEnd() throws Exception {
+	void partialContentByteRangeLargeEnd() throws Exception {
 		this.request.addHeader("Range", "bytes=9-10000");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
@@ -602,11 +600,11 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(this.response.getContentAsString()).isEqualTo(".");
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentSuffixRange() throws Exception {
+	void partialContentSuffixRange() throws Exception {
 		this.request.addHeader("Range", "bytes=-1");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
@@ -617,11 +615,11 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(this.response.getContentAsString()).isEqualTo(".");
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentSuffixRangeLargeSuffix() throws Exception {
+	void partialContentSuffixRangeLargeSuffix() throws Exception {
 		this.request.addHeader("Range", "bytes=-11");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
@@ -632,11 +630,11 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 0-9/10");
 		assertThat(this.response.getContentAsString()).isEqualTo("Some text.");
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentInvalidRangeHeader() throws Exception {
+	void partialContentInvalidRangeHeader() throws Exception {
 		this.request.addHeader("Range", "bytes= foo bar");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
@@ -644,17 +642,17 @@ public class ResourceHttpRequestHandlerTests {
 		assertThat(this.response.getStatus()).isEqualTo(416);
 		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes */10");
 		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(this.response.getHeaders("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentMultipleByteRanges() throws Exception {
+	void partialContentMultipleByteRanges() throws Exception {
 		this.request.addHeader("Range", "bytes=0-1, 4-5, 8-9");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
 
 		assertThat(this.response.getStatus()).isEqualTo(206);
-		assertThat(this.response.getContentType().startsWith("multipart/byteranges; boundary=")).isTrue();
+		assertThat(this.response.getContentType()).startsWith("multipart/byteranges; boundary=");
 
 		String boundary = "--" + this.response.getContentType().substring(31);
 
@@ -678,13 +676,13 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test  // gh-25976
-	public void partialContentByteRangeWithEncodedResource(GzipSupport.GzippedFiles gzippedFiles) throws Exception {
+	void partialContentByteRangeWithEncodedResource(GzipSupport.GzippedFiles gzippedFiles) throws Exception {
 		String path = "js/foo.js";
 		gzippedFiles.create(path);
 
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
-		handler.setResourceResolvers(Arrays.asList(new EncodedResourceResolver(), new PathResourceResolver()));
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
+		handler.setResourceResolvers(List.of(new EncodedResourceResolver(), new PathResourceResolver()));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
 		handler.setServletContext(new MockServletContext());
 		handler.afterPropertiesSet();
 
@@ -707,7 +705,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test  // gh-25976
-	public void partialContentWithHttpHead() throws Exception {
+	void partialContentWithHttpHead() throws Exception {
 		this.request.setMethod("HEAD");
 		this.request.addHeader("Range", "bytes=0-1");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
@@ -721,7 +719,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test  // SPR-14005
-	public void doOverwriteExistingCacheControlHeaders() throws Exception {
+	void doOverwriteExistingCacheControlHeaders() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.response.setHeader("Cache-Control", "no-store");
 
@@ -731,7 +729,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void ignoreLastModified() throws Exception {
+	void ignoreLastModified() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.setUseLastModified(false);
 		this.handler.handleRequest(this.request, this.response);
@@ -743,7 +741,7 @@ public class ResourceHttpRequestHandlerTests {
 	}
 
 	@Test
-	public void servletContextRootValidation() {
+	void servletContextRootValidation() {
 		StaticWebApplicationContext context = new StaticWebApplicationContext() {
 			@Override
 			public Resource getResource(String location) {
@@ -752,7 +750,7 @@ public class ResourceHttpRequestHandlerTests {
 		};
 
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
-		handler.setLocationValues(Collections.singletonList("/"));
+		handler.setLocationValues(List.of("/"));
 		handler.setApplicationContext(context);
 
 		assertThatIllegalStateException().isThrownBy(handler::afterPropertiesSet)
